--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@swc/helpers": "^0.5.3",
     "bootstrap": "^5.2.0",
-    "next": "12.2.5",
+    "next": "13.4.7",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0"
