--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@swc/helpers": "^0.5.3",
     "bootstrap": "^5.2.0",
+    "fs": "^0.0.1-security",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
